--- a/02_Webpage/TestingGround/index.html
+++ b/02_Webpage/TestingGround/index.html
@@ -12,12 +12,9 @@
   <body>
     <div class="title">
       <h1>DATA VISUALIZATION FOR ARCHITECTURE, URBANISM AND THE HUMANITIES</h1>
-      <h3>by JUAN FRANCISCO SALDARRIAGA</h3>
+      <h3> Rachael Dottle </h3>
     </div>
-    <div class="bio">
-      <img class="bioImage" src="img/jfs_image.jpeg">
-      <p class="bioText">I am a researcher at the <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a> at Columbia University and an adjunct assistant professor of urban planning and architecture at the <a href="http://www.arch.columbia.edu/"> Graduate School of Architecture, Planning and Preservation (GSAPP)</a>. I do research at the intersection of data, GIS, urbanism, architecture and the humanities and I teach graduate level <a href="https://github.com/juanfrans-courses">seminars</a> on mapping, advanced GIS and data visualization. In the past I've worked as a research scholar at the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, an architectural designer for <a href="http://www.cz-studio.com/">Carlos Zapata Studio</a> and <a href="http://www.dgtarchitects.com/">D.G.T. Architects</a>, and as the GIS project coordinator for the <a href="http://www.catholiccharitiesny.org/">Catholic Charities</a>.</p>
-    </div>
+  
     <div class=linkList>
       <h2>ASSIGNMENTS</h2>
       <ul>
