Edit console error

--- a/02_Webpage/TestingGround/assignments/d3.html
+++ b/02_Webpage/TestingGround/assignments/d3.html
@@ -7,7 +7,7 @@
  -->    <link rel= "stylesheet" type = "text/css" href = "../css/d3.css">
 </head>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
      var year = 2010;
 
